--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.0.2",
+    "decimal.js": "^10.3.1",
+    "function-plot": "^1.22.7",
+    "plotly.js": "^2.2.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
